# import_tax_calculator

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  TODO.md  deploy.cmd  deploy.sh  deploy_remote.cmd  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  docker-image.yml
apps/: __init__.py
apps/import_tax_calculator/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  views.py
apps/import_tax_calculator/migrations/: 0001_initial_squashed_0002_exchangerate.py  0002_exchangerate.py  0003_alter_importunit_currency.py
apps/import_tax_calculator_api/: __init__.py  admin.py  apps.py  serializers.py  tests.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
root/app/: entrypoint.sh  run.sh
script/: build_run.cmd
source/: __init__.py  manage.py
source/import_tax_calc/: asgi.py  settings.py  urls.py
source/import_tax_calculator/: admin.py  apps.py  models.py  tests.py  views.py
source/import_tax_calculator/migrations/: 0001_initial.py  0002_exchangerate.py
source/import_tax_calculator/templates/: calculate.html
templates/: calculate.html
userscripts/: README.md  amazon.js  amazon.user.js
