[project]
name = "import-tax-calc"
version = "0"
description = "Import Tax Calculator for Ukraine"
authors = ["Alexey ALERT Rubasheff <alexey.rubasheff@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.9",
]
